# fenris

./: .flutter-plugins-dependencies  .gitignore  Cargo.toml  Dioxus.toml  README.md  package.json  pubspec.yaml  structurizer.sln
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
assets/: tailwind.css
integration_test/: simple_test.dart
lib/: main.dart
lib/components/: side_panel.dart
lib/pages/: about_page.dart  home_page.dart  setting_page.dart
lib/theme/: theme.dart
linux/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust_builder/: pubspec.yaml
src/: App.css  App.jsx  App.razor  Program.cs  Structurizer.csproj  _Imports.razor  main.jsx  main.rs  package-lock.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cli/: cli_commands_helper.rs  mod.rs
src-tauri/src/json/: json_helpers.rs  mod.rs  search_helpers.rs
src-tauri/src/ollama/: ai_api.rs  list_of_ai_models.rs  mod.rs
src-tauri/src/sqlite/: mod.rs  sqlite_commands_helper.rs  sqlite_migrations.rs  sqlite_tags_commands.rs
src-tauri/src/state/: add_new_note_state.rs  auto_save.rs  counter.rs  folder_items_state.rs  folder_state.rs  markdown_state.rs  mod.rs  notes_state.rs  shell_context_state.rs
src-tauri/src/store/: ai_shell_store.rs  mod.rs  theme_provider.rs
src-tauri/src/theme/: mod.rs  theme_lists.rs  theme_store.rs
src-tauri/src/ui_helpers/: dialogs.rs  file_picker.rs  mod.rs
test/: widget_test.dart
windows/: CMakeLists.txt
(+93 files in other folders)
