[package]
name = "fenris"
version = "0.1.0"
description = "A note-taking app that also can be used for JSON parsing and formatting"
authors = ["Cyprien"]
edition = "2021"

[lib]
name = "fenris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
reqwest = { version = "0.12.24", features = ["json"] }
pulldown-cmark = "0.13.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-store = "2"
regex = "1.12.2"
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
anyhow = "1.0.100"
tauri-plugin-fs = "2"
